Fix problem with NumRenderingThreads>0 with devices that request data from the bottom up such as the 'bmp*' devices. Bug 689985.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8906 a1074d23-0009-0410-80fe-cf8c14f379e6